Testfix - permgen in new tests.
Signed-off-by: Marc-Antoine Gouillart <marsu_pilami@msn.com>