@@ -15,6 +15,10 @@
 	<url>http://jqm.readthedocs.org</url>
 	<description>Test suite for the JQM engine + service</description>
 
+	<properties>
+		<argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+	</properties>
+
 	<dependencies>
 		<!-- The very goal of this artifact is to run tests with the other API 
 			implementation -->
